# demoqa_diplome

./: README.md  pyproject.toml  requirements.txt  resource.py
data/: users.py
demoqa_diplome_tests/models/pages/: book_store_page.py  registration_page.py
demoqa_diplome_tests/utils/: attach.py  resource.py
model/pages/: registration_page.py
models/pages/: book_store_page.py  registration_page.py
tests/: conftest.py  custom_parameters_sudent_registration_form_test.py  empty_parameters_sudent_registration_form_test.py  min_parameters_sudent_registration_form_test.py  sudent_registration_form_test.py  test_create_new_book_store_user_without_data.py  test_create_new_book_store_user_withput_data.py  test_custom_parameters_sudent_registration_form.py  test_empty_parameters_sudent_registration_form.py  test_login_book_store.py  test_login_book_store_without_data.py  test_min_parameters_sudent_registration_form.py  test_sudent_registration_form.py
tests/tests_api/: test_register_post.py  test_users_delete.py
tests/tests_ui/: sudent_registration_form_test.py  test_custom_parameters_sudent_registration_form.py  test_empty_parameters_sudent_registration_form.py  test_min_parameters_sudent_registration_form.py
tests/ui_tests/: custom_parameters_sudent_registration_form_test.py  empty_parameters_sudent_registration_form_test.py  sudent_registration_form_test.py
utils/: attach.py  log_extending.py  resource.py
